# pokemon-cost-scraper

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile  api.py  docker-compose.yml  llm.py  login_helper.py  requirements.txt  tcg_scraper.py  test.py
flutter_app/: .flutter-plugins-dependencies  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/pokemon/flutter_app/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart  theme.dart
flutter_app/lib/screens/: camera_screen.dart  card_details_screen.dart  processing_screen.dart  scraping_screen.dart  search_results_screen.dart
flutter_app/lib/widgets/: glassmorphic_card.dart  tactical_overlay.dart
flutter_app/test/: widget_test.dart
frontend/: main.lua
halo_app/: app.py
